# pdfcrypt

./: .gitignore  LICENSE  README.md  pyproject.toml
pdfcrypt/: __init__.py  cli.py
